# pavepo-test

./: README.md  alembic.ini  docker-compose.yml  pyproject.toml
.envs_example/: .fastapi  .postgres
alembic/: env.py
alembic/versions/: 2025_03_29_2302-9914121072e7_.py  ead3b2083ca8_initial.py
compose/fastapi/: Dockerfile  prestart.sh
src/: main.py
src/auth/: auth.py  decorators.py  oauth.py  permissions.py  security.py  utils.py  validators.py
src/config/: constants.py  database.py  settings.py
src/models/: __init__.py  attachment.py  user.py
src/repository/: attachment_repository.py  user_repository.py
src/router/: api.py  exceptions.py  ssr.py
src/router/v1/: __init__.py  attachment.py  file.py  user.py
src/schemas/: attachment_schemas.py  user_schemas.py
src/service/: attachment_service.py  user_service.py
src/templates/: base.html  files.html  index.html  users.html
src/utils/: utils.py
