[project]
name = "pavepo-test"
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/SuperLalka/pavepo-test.git"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "0.34.0"}
fastapi = "0.115.12"
psycopg2-binary = "2.9.10"
asyncpg = "0.30.0"
SQLAlchemy = "2.0.39"
alembic = "1.15.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
